# speech2text-vosk

./: .gitignore  LICENSE  README.md  predict_punctuation.py  pyproject.toml  transcribe.py
patches/: recasepunc.py
samples/: test.mp3.predicted.txt
