[tool.poetry]
name = "speech2text"
version = "0.1.0"
description = "Transcribes speech to text. Predicts text letters case and punctuation."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
vosk = "^0.3.45"
pydub = "^0.25.1"
ffmpeg = "^1.4"
regex = "^2024.11.6"
torch = "^2.5.1"
transformers = "^4.46.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
